--- a/src/components/grid/GameTile.module.css
+++ b/src/components/grid/GameTile.module.css
@@ -4,7 +4,7 @@
   transition: background-color 0.2s ease;
   width: 100%;
   aspect-ratio: 1 / 1;
-  border-radius: 4px;
+  border-radius: var(--chakra-radii-l3);
   box-shadow: inset 0 0 0 1px #444;
 
   &.active {
@@ -19,5 +19,38 @@
     &:hover {
       filter: none;
     }
+  }
+}
+
+.image {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+  border-radius: var(--chakra-radii-l3);
+  display: block;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+}
+
+.visible-image {
+  opacity: 1;
+}
+
+.emoji-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  container-type: size;
+
+  .emoji {
+    font-size: 95cqi;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+  }
+
+  .visible-emoji {
+    opacity: 1;
   }
 }
